--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -83,7 +83,7 @@
       <main class="mx-auto mt-10 max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
         <div class="sm:text-center lg:text-left">
           <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl md:text-6xl">
-            <span class="block xl:inline">Un Blind Test</span>
+            <span class="block xl:inline">Un Mix de Jeux</span>
             <span class="block text-indigo-600 xl:inline">de grande qualité</span>
           </h1>
           <p class="mt-3 text-base text-gray-500 sm:mx-auto sm:mt-5 sm:max-w-xl sm:text-lg md:mt-5 md:text-xl lg:mx-0">Elu meilleur Blindtest de tous les temps par moi même....et c'est pas rien ....</p>
@@ -106,13 +106,12 @@
   </div>
 </div>
 
-<!-- This example requires Tailwind CSS v2.0+ -->
-<div class="bg-white py-12">
+<div class="bg-white py-12" style='margin-top:50px'>
   <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
     <div class="lg:text-center">
-      <h2 class="text-lg font-semibold text-indigo-600">Transactions</h2>
-      <p class="mt-2 text-3xl font-bold leading-8 tracking-tight text-gray-900 sm:text-4xl">A better way to send money</p>
-      <p class="mt-4 max-w-2xl text-xl text-gray-500 lg:mx-auto">Lorem ipsum dolor sit amet consect adipisicing elit. Possimus magnam voluptatum cupiditate veritatis in accusamus quisquam.</p>
+      <h2 class="text-lg font-semibold text-indigo-600">Les plus qui nous rend uniques</h2>
+      <p class="mt-2 text-3xl font-bold leading-8 tracking-tight text-gray-900 sm:text-4xl">Le meilleur moyen pour s'amuser</p>
+      <p class="mt-4 max-w-2xl text-xl text-gray-500 lg:mx-auto">Aucun doute là dessus, rien n'a jamais été conçu d'aussi coooooool.</p>
     </div>
 
     <div class="mt-10">
